--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Ovo&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Moul&family=Rakkas&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -17,6 +19,14 @@ body{
     background-color: rgb(240, 231, 223);
 }
 
+.musica{
+    background-color: black;
+}
+
+.serie{
+    background-color: rgb(207, 207, 207);
+}
+
 
 .parallax{
     width: 100%;
@@ -32,15 +42,37 @@ main{
     padding: 0 300px;
 }
 
-section.module h1{
-    color: rgb(0,0,0);
-    font-family: "Volkhov", serif;
-    font-size: 65px;
-    font-weight: 1100;
+h1{
+    font-family: "Lobster", sans-serif;
+    font-size: 70px;
+    font-weight: 2000;
     text-transform: uppercase;
     position: absolute;
-    top: 80%;
-    margin-left: 20px;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+    text-align: center;
+
+}
+
+.home{
+    color: rgb(10, 10, 60);
+    background-color: rgba(132, 136, 159, 0.338);
+    
+}
+
+.livros{
+    color: rgb(53, 0, 0);
+    background-color: rgba(90, 64, 50, 0.345);
+}
+
+.musicas{
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.151);
+}
+
+.series{
+    color: rgb(0, 0, 0);
 }
 
 h3{
@@ -52,7 +84,6 @@ h3{
 }
 
 h2{
-    color: rgb(0, 0, 0);
     font-family: "Volkhov", serif;
     text-align: center;
     padding-top: 50px;
@@ -75,6 +106,8 @@ section.module.parallax{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    justify-content: center;
+    align-items: center;
 }
 
 section.module.imagem{
@@ -85,6 +118,15 @@ section.module.imagem-2{
     background-image: url(livro.png);
 }
 
+
+section.module.imagem-3{
+    background-image: url(musica.jpeg);
+}
+
+section.module.imagem-4{
+    background-image: url(serie.png);
+}
+
 .menu{
     padding: 10px;
     background-color: rgb(195, 195, 242);
@@ -93,7 +135,7 @@ section.module.imagem-2{
     color: rgb(12, 12, 66);
 }
 
-menu:hover{
+.menu:hover{
     background-color: rgb(12, 12, 66);
     color: rgb(195, 195, 242);
 }
@@ -103,6 +145,12 @@ menu:hover{
     text-align: center;
     margin: 0 auto;
     padding: 0 300px;
+}
+
+.livro-3{
+    text-align: center;
+    margin: 0 auto;
+    padding: 15px 160px 0 160px;
 }
 
 .frase-2{
@@ -137,15 +185,40 @@ menu:hover{
     align-items: center;
 }
 
+.descrição-2{
+    flex: 1;
+    padding-right: 100px;
+    padding-left: 20px;
+    text-align: justify;
+    align-items: center;
+}
+
 .imagem {
     flex: 1;
     display: flex;
   }
-  
-  .imagem img {
+
+.imagem-2 {
+    flex: 1;
+    display: flex;
+}
+
+.imagem img {
     width: 500px;
     float: right;
     margin-left: 20px;
-  }
+}
 
-  
+.trailer{
+    margin-left: 70px;
+}
+
+.spotify{ 
+    padding: 50px;
+}
+
+.music {
+    width: 100%;
+    height: 300px;
+    margin-bottom: -30px;
+}
